tests/test-05-full/render_2/HelmRelease-infra-thanos-thanos.yml
---
# Source: thanos/templates/compact/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: thanos-compact
  namespace: infra-thanos
  labels:
    helm.sh/chart: thanos-1.22.1
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/version: "0.40.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: compact
    app.kubernetes.io/component-instance: thanos-compact
automountServiceAccountToken: false
---
# Source: thanos/templates/query/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: thanos-query
  namespace: infra-thanos
  labels:
    helm.sh/chart: thanos-1.22.1
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/version: "0.40.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: query
    app.kubernetes.io/component-instance: thanos-query
automountServiceAccountToken: false
---
# Source: thanos/templates/store-gateway/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: thanos-store-gateway
  namespace: infra-thanos
  labels:
    helm.sh/chart: thanos-1.22.1
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/version: "0.40.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: store-gateway
    app.kubernetes.io/component-instance: thanos-store-gateway
automountServiceAccountToken: false
---
# Source: thanos/templates/secret-objstore-config.yaml
apiVersion: v1
kind: Secret
metadata:
  name: thanos-objstore-config
  namespace: infra-thanos
  labels:
    helm.sh/chart: thanos-1.22.1
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/version: "0.40.1"
    app.kubernetes.io/managed-by: Helm
data:
  config: |-
    dHlwZTogUzMKY29uZmlnOgogIGJ1Y2tldDogdGhhbm9zLWJ1Y2tldAogIGVuZHBvaW50OiByb29rLWNlcGgtcmd3LWNlcGgtb2JqZWN0c3RvcmUucm9vay1jZXBoLnN2YwogIHJlZ2lvbjogcm9vawogIGFjY2Vzc19rZXk6IEJ1Y2tldFNlY3JldE5vdEF2YWlsYWJsZVlldAogIHNlY3JldF9rZXk6IEJ1Y2tldFNlY3JldE5vdEF2YWlsYWJsZVlldAogIGluc2VjdXJlOiB0cnVl
---
# Source: thanos/templates/compact/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-compact-headless
  namespace: infra-thanos
  labels:
    helm.sh/chart: thanos-1.22.1
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/version: "0.40.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: compact
    app.kubernetes.io/component-instance: thanos-compact
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 10902
      targetPort: http
  selector:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: compact
---
# Source: thanos/templates/query/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-query
  namespace: infra-thanos
  labels:
    helm.sh/chart: thanos-1.22.1
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/version: "0.40.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: query
    app.kubernetes.io/component-instance: thanos-query
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 10901
      targetPort: grpc
    - name: http
      protocol: TCP
      port: 10902
      targetPort: http
  selector:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: query
---
# Source: thanos/templates/store-gateway/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-store-gateway-headless
  namespace: infra-thanos
  labels:
    helm.sh/chart: thanos-1.22.1
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/version: "0.40.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: store-gateway
    app.kubernetes.io/component-instance: thanos-store-gateway
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: grpc
      port: 10901
      targetPort: grpc
    - name: http
      protocol: TCP
      port: 10902
      targetPort: http
  selector:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: store-gateway
---
# Source: thanos/templates/query/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-query
  namespace: infra-thanos
  labels:
    helm.sh/chart: thanos-1.22.1
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/version: "0.40.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: query
    app.kubernetes.io/component-instance: thanos-query
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thanos
      app.kubernetes.io/instance: thanos
      app.kubernetes.io/component: query
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thanos
        app.kubernetes.io/instance: thanos
        app.kubernetes.io/component: query
    spec:
      serviceAccountName: thanos-query
      securityContext:
        fsGroup: 65534
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: thanos-query
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65534
            seccompProfile:
              type: RuntimeDefault
          image: quay.io/thanos/thanos:v0.40.1
          imagePullPolicy: IfNotPresent
          env:
            - name: HOST_IP_ADDRESS
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
          args:
            - query
            - --log.level=info
            - --log.format=logfmt
            - --grpc-address=0.0.0.0:10901
            - --http-address=0.0.0.0:10902
            - --endpoint=dnssrv+_grpc._tcp.thanos-store-gateway-headless.infra-thanos.svc.cluster.local
          ports:
            - name: grpc
              protocol: TCP
              containerPort: 10901
            - name: http
              protocol: TCP
              containerPort: 10902
          livenessProbe:
            failureThreshold: 4
            httpGet:
              path: /-/healthy
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 20
            httpGet:
              path: /-/ready
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
---
# Source: thanos/templates/compact/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-compact
  namespace: infra-thanos
  labels:
    helm.sh/chart: thanos-1.22.1
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/version: "0.40.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: compact
    app.kubernetes.io/component-instance: thanos-compact
spec:
  serviceName: thanos-compact-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thanos
      app.kubernetes.io/instance: thanos
      app.kubernetes.io/component: compact
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thanos
        app.kubernetes.io/instance: thanos
        app.kubernetes.io/component: compact
      annotations:
        checksum/config: 074d8aeda012087b4d8e16d542949f9b9de17694f57d55eff67360700e82aedf
    spec:
      serviceAccountName: thanos-compact
      securityContext:
        fsGroup: 65534
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: thanos-compact
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65534
            seccompProfile:
              type: RuntimeDefault
          image: quay.io/thanos/thanos:v0.40.1
          imagePullPolicy: IfNotPresent
          env:
            - name: NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: HOST_IP_ADDRESS
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
          args:
            - compact
            - --wait
            - --log.level=info
            - --log.format=logfmt
            - --http-address=0.0.0.0:10902
            - --data-dir=/var/thanos/compact
            - --objstore.config-file=/etc/thanos/objstore.yaml
            - --compact.enable-vertical-compaction
          ports:
            - name: http
              protocol: TCP
              containerPort: 10902
          livenessProbe:
            failureThreshold: 4
            httpGet:
              path: /-/healthy
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 20
            httpGet:
              path: /-/ready
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /etc/thanos/objstore.yaml
              name: objstore-config
              subPath: config
              readOnly: true
            - mountPath: /var/thanos/compact
              name: data
              readOnly: false
      volumes:
        - name: objstore-config
          secret:
            secretName: thanos-objstore-config
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app.kubernetes.io/name: thanos
          app.kubernetes.io/instance: thanos
          app.kubernetes.io/component: compact
      spec:
        storageClassName: ceph-block
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
---
# Source: thanos/templates/store-gateway/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-store-gateway
  namespace: infra-thanos
  labels:
    helm.sh/chart: thanos-1.22.1
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/version: "0.40.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: store-gateway
    app.kubernetes.io/component-instance: thanos-store-gateway
spec:
  serviceName: thanos-store-gateway-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thanos
      app.kubernetes.io/instance: thanos
      app.kubernetes.io/component: store-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thanos
        app.kubernetes.io/instance: thanos
        app.kubernetes.io/component: store-gateway
      annotations:
        checksum/config: 074d8aeda012087b4d8e16d542949f9b9de17694f57d55eff67360700e82aedf
    spec:
      serviceAccountName: thanos-store-gateway
      securityContext:
        fsGroup: 65534
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: thanos-store-gateway
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65534
            seccompProfile:
              type: RuntimeDefault
          image: quay.io/thanos/thanos:v0.40.1
          imagePullPolicy: IfNotPresent
          env:
            - name: NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: HOST_IP_ADDRESS
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
          args:
            - store
            - --log.level=info
            - --log.format=logfmt
            - --grpc-address=0.0.0.0:10901
            - --http-address=0.0.0.0:10902
            - --data-dir=/var/thanos/store
            - --objstore.config-file=/etc/thanos/objstore.yaml
          ports:
            - name: grpc
              protocol: TCP
              containerPort: 10901
            - name: http
              protocol: TCP
              containerPort: 10902
          livenessProbe:
            failureThreshold: 4
            httpGet:
              path: /-/healthy
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 20
            httpGet:
              path: /-/ready
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /etc/thanos/objstore.yaml
              name: objstore-config
              subPath: config
              readOnly: true
            - mountPath: /var/thanos/store
              name: data
              readOnly: false
      volumes:
        - name: objstore-config
          secret:
            secretName: thanos-objstore-config
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app.kubernetes.io/name: thanos
          app.kubernetes.io/instance: thanos
          app.kubernetes.io/component: store-gateway
      spec:
        storageClassName: ceph-block
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
